syntax = "proto3";
package proto;

// import "github.com/golang/protobuf/ptypes/timestamp";
service Tablet {
    rpc LRJoinRPC(LRJoinRequest) returns(LREntry);
    rpc LookUpRPC(LookUpRequest) returns(LREntry);
}

message LRJoinRequest {
    string unique_key = 1;
    string global_port = 2;
    float latitude = 3;
    float longitude = 4;
}

message LookUpRequest {
   uint32 id = 1; 
}

message LREntry {
    uint32 id  = 7;
    string unique_key = 8;
    string global_ip = 1;
    string global_port = 2;
    float latitude = 3;
    float longitude = 4;
    int64 created_at = 5;
    int64 updated_at = 6;
}

message LREntries {
    repeated LREntry entries = 1;
}